{
  "version": 4,
  "terraform_version": "0.12.31",
  "serial": 48,
  "lineage": "27e725f0-1755-ead0-ed3d-199c16a5b1c3",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_instance",
      "name": "controller",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-02fe94dee086c0c37",
            "arn": "arn:aws:ec2:us-east-1:993161815091:instance/i-06ecf0b7c992364a3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "mukesh-local-sandbox-ec2-profile",
            "id": "i-06ecf0b7c992364a3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "k8s_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-08e51f3b3732ba9fe",
            "private_dns": "ip-10-0-1-143.ec2.internal",
            "private_ip": "10.0.1.143",
            "public_dns": "ec2-52-91-255-172.compute-1.amazonaws.com",
            "public_ip": "52.91.255.172",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a05f9b19ee51cae7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0296f2eef1d6f384d",
            "tags": {
              "Name": "mukesh-local-sandbox-controller-tf"
            },
            "tags_all": {
              "Name": "mukesh-local-sandbox-controller-tf"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-013770959d0d7e446"
            ]
          },
          "dependencies": [
            "module.vpc.aws_iam_instance_profile.iam-profile",
            "module.vpc.aws_iam_role.iam-role",
            "module.vpc.aws_key_pair.k8s_key",
            "module.vpc.aws_security_group.ssh-allowed",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993161815091:internet-gateway/igw-0e0e01badc664341f",
            "id": "igw-0e0e01badc664341f",
            "owner_id": "993161815091",
            "tags": {
              "Name": "mukesh-local-igw"
            },
            "tags_all": {
              "Name": "mukesh-local-igw"
            },
            "vpc_id": "vpc-0e432bdfb1ecf6937"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993161815091:route-table/rtb-0ca56468775e101fb",
            "id": "rtb-0ca56468775e101fb",
            "owner_id": "993161815091",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e0e01badc664341f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "mukesh-local-rt"
            },
            "tags_all": {
              "Name": "mukesh-local-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e432bdfb1ecf6937"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-public-subnet-association",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05393f0dc011c4a9e",
            "route_table_id": "rtb-0ca56468775e101fb",
            "subnet_id": "subnet-0296f2eef1d6f384d"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public-rt",
            "module.vpc.aws_subnet.public-subnet-1",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ssh-allowed",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993161815091:security-group/sg-013770959d0d7e446",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013770959d0d7e446",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20220611040022596100000002",
            "name_prefix": "terraform-",
            "owner_id": "993161815091",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssh allowed"
            },
            "tags_all": {
              "Name": "ssh allowed"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e432bdfb1ecf6937"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet-1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993161815091:subnet/subnet-0296f2eef1d6f384d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0296f2eef1d6f384d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "993161815091",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "mukesh-local-public-sbunet"
            },
            "tags_all": {
              "Name": "mukesh-local-public-sbunet"
            },
            "vpc_id": "vpc-0e432bdfb1ecf6937"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:993161815091:vpc/vpc-0e432bdfb1ecf6937",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dfe04d34bacdd736",
            "default_route_table_id": "rtb-09dd43d4b288e44a0",
            "default_security_group_id": "sg-060cfbd9dc43330f2",
            "dhcp_options_id": "dopt-0853680f788e7dadb",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e432bdfb1ecf6937",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-09dd43d4b288e44a0",
            "owner_id": "993161815091",
            "tags": {
              "Name": "mukesh-local-vpc"
            },
            "tags_all": {
              "Name": "mukesh-local-vpc"
            }
          }
        }
      ]
    }
  ]
}